Add resurect for tmux and nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# tmux-resurrent settings
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+run -b '~/.tmux/plugins/tmux-resurrect/scripts/restore.sh r'
