--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,21 +1,22 @@
-set-option -g default-shell /bin/zsh
-set -g default-terminal "screen-256color"
+# set-option -g default-shell /bin/zsh
 
 # set Ctrl-Space as the Default prefix
 unbind C-Space
 set -g prefix C-Space
 bind C-Space send-prefix
 
+set -s set-clipboard on
 # history limit
 set-option -g history-limit 5000
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'dracula/tmux'
+set -g default-terminal "screen-256color"
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 # tmux-resurrent settings
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
@@ -24,3 +25,4 @@ set -g @resurrect-strategy-nvim 'session'
 run '~/.tmux/plugins/tpm/tpm'
 
 run -b '~/.tmux/plugins/tmux-resurrect/scripts/restore.sh r'
+
