--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,7 @@ bind C-Space send-prefix
 set -s set-clipboard on
 # history limit
 set-option -g history-limit 5000
+set-option -sa terminal-features ',xterm-256color:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
